# Estructuras-de-datos---Tarea-3

tarea3/: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.am.bak  Makefile~  cola.c  cola.c~  cola.h  cola.h~  configure.ac  error.c  error.c~  error.h  error.h~  input  input~  lista.c  lista.c~  lista.h  lista.h~  main.c  main.c~  pila.c  pila.c~  pila.h  pila.h~  tarea3
tarea3/.anjuta/session/: anjuta.session  dock-layout.xml
