## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = tarea3

tarea3_SOURCES = \
	main.c  \
	pila.h  \
	error.h  \
	error.c  \
	cola.c  \
	cola.h

tarea3_LDFLAGS = 

tarea3_LDADD = 

